--- a/client/static/app.css
+++ b/client/static/app.css
@@ -1,9 +1,7 @@
 body {
-  height: 100%;
-}
-
-html {
-  height: 100%;
+  min-height: 100vh;
+  display: flex;
+  flex-direction:column;
 }
 
 .link {
